--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dev_dependencies:
   flutter_svg: ^2.0.10+1
   intl: ^0.19.0
   signature: ^4.1.1
+  image_picker: ^1.0.8
+  file_picker: ^5.3.0
+
+
 
 
 
